--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "moment-timezone": "^0.5.43",
     "mysql": "^2.18.1",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.20"
