--- a/datagraphs/package.json
+++ b/datagraphs/package.json
@@ -21,6 +21,7 @@
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-bar-chart": "^0.1.2",
+    "react-bootstrap": "^2.7.2",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-gauge-chart": "^0.4.1",
@@ -28,7 +29,7 @@
     "react-icons": "^4.7.1",
     "react-minimal-pie-chart": "^8.4.0",
     "react-router-dom": "^6.8.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.2",
     "recharts": "^2.4.3",
     "sweetalert": "^2.1.2",
