--- a/datagraphs/package.json
+++ b/datagraphs/package.json
@@ -23,6 +23,7 @@
     "react-bar-chart": "^0.1.2",
     "react-bootstrap": "^2.7.2",
     "react-chartjs-2": "^5.2.0",
+    "react-datetime": "^3.2.0",
     "react-dom": "^18.2.0",
     "react-gauge-chart": "^0.4.1",
     "react-google-charts": "^4.0.0",
