--- a/datagraphs/package.json
+++ b/datagraphs/package.json
@@ -23,16 +23,18 @@
     "react-bar-chart": "^0.1.2",
     "react-bootstrap": "^2.7.2",
     "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^4.11.0",
     "react-datetime": "^3.2.0",
     "react-dom": "^18.2.0",
     "react-gauge-chart": "^0.4.1",
     "react-google-charts": "^4.0.0",
-    "react-icons": "^4.7.1",
+    "react-icons": "^4.8.0",
     "react-minimal-pie-chart": "^8.4.0",
     "react-router-dom": "^6.8.0",
     "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.2",
     "recharts": "^2.4.3",
+    "styled-components": "^5.3.10",
     "sweetalert": "^2.1.2",
     "web-vitals": "^2.1.4"
   },
