--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "connect-timeout": "^1.9.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "moment-timezone": "^0.5.43",
