--- a/datagraphs/package.json
+++ b/datagraphs/package.json
@@ -15,6 +15,8 @@
     "bootstrap": "^5.2.3",
     "chart.js": "^4.2.0",
     "chartjs-plugin-zoom": "^2.0.1",
+    "highcharts": "^11.1.0",
+    "highcharts-react-official": "^3.2.0",
     "moment": "^2.29.4",
     "papaparse": "^5.3.2",
     "react": "^18.2.0",
