--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "moment-timezone": "^0.5.43",
     "mysql": "^2.18.1",
+    "mysql2": "^3.5.1",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.20"
   }
