--- a/datagraphs/package.json
+++ b/datagraphs/package.json
@@ -33,10 +33,12 @@
     "react-minimal-pie-chart": "^8.4.0",
     "react-router-dom": "^6.8.0",
     "react-scripts": "^5.0.1",
+    "react-time-picker": "^6.5.0",
     "react-toastify": "^9.1.2",
     "recharts": "^2.4.3",
     "styled-components": "^5.3.10",
     "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.7.27",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
