--- a/datagraphs/package.json
+++ b/datagraphs/package.json
@@ -10,11 +10,13 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.11.2",
     "apexcharts": "^3.37.1",
     "axios": "^1.3.2",
     "bootstrap": "^5.2.3",
     "chart.js": "^4.2.0",
     "chartjs-plugin-zoom": "^2.0.1",
+    "file-saver": "^2.0.5",
     "highcharts": "^11.1.0",
     "highcharts-react-official": "^3.2.0",
     "moment": "^2.29.4",
@@ -36,7 +38,7 @@
     "react-time-picker": "^6.5.0",
     "react-toastify": "^9.1.2",
     "recharts": "^2.4.3",
-    "styled-components": "^5.3.10",
+    "styled-components": "^5.3.11",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.7.27",
     "web-vitals": "^2.1.4"
