--- a/datagraphs/package.json
+++ b/datagraphs/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.7",
+    "@mui/x-data-grid": "^6.18.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -35,12 +36,14 @@
     "react-minimal-pie-chart": "^8.4.0",
     "react-router-dom": "^6.8.0",
     "react-scripts": "^5.0.1",
+    "react-scroll": "^1.9.0",
+    "react-select": "^5.8.0",
     "react-time-picker": "^6.5.0",
     "react-toastify": "^9.1.2",
     "recharts": "^2.4.3",
     "styled-components": "^5.3.11",
     "sweetalert": "^2.1.2",
-    "sweetalert2": "^11.7.27",
+    "sweetalert2": "^11.10.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
