--- a/datagraphs/package.json
+++ b/datagraphs/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^5.2.3",
     "chart.js": "^4.2.0",
     "chartjs-plugin-zoom": "^2.0.1",
+    "devextreme-react": "^23.2.3",
     "file-saver": "^2.0.5",
     "highcharts": "^11.1.0",
     "highcharts-react-official": "^3.2.0",
@@ -27,7 +28,7 @@
     "react-bar-chart": "^0.1.2",
     "react-bootstrap": "^2.7.2",
     "react-chartjs-2": "^5.2.0",
-    "react-datepicker": "^4.11.0",
+    "react-datepicker": "^4.25.0",
     "react-datetime": "^3.2.0",
     "react-dom": "^18.2.0",
     "react-gauge-chart": "^0.4.1",
